// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dropDownComponents <AggregationLevel/> matches the snapshot 1`] = `
<ComponentWithMargin
  filled={true}
  label="Aggregation Level"
  name="aggregationLevel"
  onChange={[MockFunction]}
  value="test"
>
  <option
    value="SUM"
  >
    Sum
  </option>
  <option
    value="AVERAGE"
  >
    Average
  </option>
</ComponentWithMargin>
`;

exports[`dropDownComponents <Category/> matches the snapshot 1`] = `
<ComponentWithMargin
  filled={true}
  label="Category"
  name="category"
  onChange={[MockFunction]}
  value="test"
>
  <option
    value="FAVORITE_VIEWS"
  >
    Favorite views
  </option>
  <option
    value="FAVORITES_SAVED"
  >
    Favorites saved
  </option>
  <option
    value="USERS"
  >
    Users
  </option>
  <option
    value="TOP_FAVORITES"
  >
    Top favorites
  </option>
  <option
    value="DATA_VALUES"
  >
    Data values
  </option>
</ComponentWithMargin>
`;

exports[`dropDownComponents <ChartType/> matches the snapshot 1`] = `
<ComponentWithMargin
  filled={true}
  label="Chart Type"
  name="chartType"
  onChange={[MockFunction]}
  value="test"
>
  <option
    value="ALL"
  >
    All
  </option>
  <option
    value="TOTAL"
  >
    Total
  </option>
</ComponentWithMargin>
`;

exports[`dropDownComponents <EventType/> matches the snapshot 1`] = `
<ComponentWithMargin
  filled={true}
  label="Event Type"
  name="eventType"
  onChange={[MockFunction]}
  value="test"
>
  <option
    value="CHART_VIEW"
  >
    Chart
  </option>
  <option
    value="MAP_VIEW"
  >
    Map
  </option>
  <option
    value="REPORT_TABLE_VIEW"
  >
    Report table
  </option>
  <option
    value="EVENT_REPORT_VIEW"
  >
    Event report
  </option>
  <option
    value="EVENT_CHART_VIEW"
  >
    Event chart
  </option>
  <option
    value="DASHBOARD_VIEW"
  >
    Dashboard
  </option>
  <option
    value="DATA_SET_REPORT_VIEW"
  >
    Data set report
  </option>
</ComponentWithMargin>
`;

exports[`dropDownComponents <Interval/> matches the snapshot 1`] = `
<ComponentWithMargin
  filled={true}
  label="Interval"
  name="interval"
  onChange={[MockFunction]}
  value="test"
>
  <option
    value="DAY"
  >
    Day
  </option>
  <option
    value="WEEK"
  >
    Week
  </option>
  <option
    value="MONTH"
  >
    Month
  </option>
  <option
    value="YEAR"
  >
    Year
  </option>
</ComponentWithMargin>
`;

exports[`dropDownComponents <PageSize/> matches the snapshot 1`] = `
<ComponentWithMargin
  filled={true}
  label="Page Size"
  name="pageSize"
  onChange={[MockFunction]}
  value="test"
>
  <option
    value={5}
  >
    5
  </option>
  <option
    value={10}
  >
    10
  </option>
  <option
    value={15}
  >
    15
  </option>
  <option
    value={20}
  >
    20
  </option>
  <option
    value={25}
  >
    25
  </option>
</ComponentWithMargin>
`;

exports[`dropDownComponents <SortOrder/> matches the snapshot 1`] = `
<ComponentWithMargin
  filled={true}
  label="Sort Order"
  name="sortOrder"
  onChange={[MockFunction]}
  value="test"
>
  <option
    value="ASC"
  >
    Ascending
  </option>
  <option
    value="DESC"
  >
    Descending
  </option>
</ComponentWithMargin>
`;
